Video Editing: Preview shows previously cached frame after Hard Cut and Extend #74875

Closed
opened 2020-03-18 11:18:45 +01:00 by Gabriel · 11 comments

System Information
Operating system: Win 10, 64bit
Graphics card: no

Blender Version
Broken: (v 2.82a) and also (v 2.83 Alpha, Date 2020-03-18 17:16, Hash c9c08dc7c8)

Short description of error
I often freeze a sequence, by hard cut, move the right part and extend the left part.
(1234) -> hard cut -> (12|34) -> move right -> (12|--|34) -> extend left -> (1222|34)

Sometimes the preview then shows a previously cached frame at the beginning of the frozen sequence, resulting in a visible backward motion.
Correct Preview: (1222|34)
Wrong Preview: (1232|34)

Exact steps for others to reproduce the error
In the Video Editor:
Step 0: Add a scene or image sequence with 4 frames (1234) or open the attached file bug test.blend.

  • Preview shows Frame 1
    Step 1: Type the right arrow key > twice

  • Preview shows Frame 3
    Step 2: Type Shift-K to Hard Cut the strip (12|34) into a new left strip and a new right strip.

  • Preview shows Frame 3
    Step 3: Use the mouse to Delete or move away the right strip (34).

  • Preview shows nothing
    Step 4: Pull the arrow of the left strip (12) to Extend it by two or more frames.

  • Preview shows Frame 3 (but it should show Frame 2)
    Step 5: Press the arrow keys to switch trough the frames

  • Preview shows the frames (1232) (but it should show the frames (1222))
    Step 6: Clear cache (Move the strip, or save and reopen the file)

  • Preview shows the frames (1222)

Note 1: Error MAY NOT occur, if during Step 1, the left arrow key < was pressed.
Note 2: Error MAY NOT occur, if during Step 1, the Play Animation button was pressed.
Note 3: Error DOES occur, if in Step 1, the mouse is used to reach Frame 3 (as far as I have tested it)
Note 4: Error DOES NOT occur, if the time cursor is moved between Step 2 and Step 3.
Note 5: Error DOES occur, if the initial scene has a different number of frames.
Note 6: Error DOES occur, if the Hard Cut is at a different position.
Note 7: Error DOES NOT show in the rendered animation
Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce.

Picture 1: Correct Preview
correct preview.png

Picture 2: Wrong Preview
wrong preview.png

**System Information** Operating system: Win 10, 64bit Graphics card: no **Blender Version** Broken: (v 2.82a) and also (v 2.83 Alpha, Date 2020-03-18 17:16, Hash c9c08dc7c873) **Short description of error** I often freeze a sequence, by hard cut, move the right part and extend the left part. (1234) -> hard cut -> (12|34) -> move right -> (12|--|34) -> extend left -> (1222|34) Sometimes the preview then shows a previously cached frame at the beginning of the frozen sequence, resulting in a visible backward motion. Correct Preview: (12**22**|34) Wrong Preview: (12**32**|34) **Exact steps for others to reproduce the error** In the Video Editor: Step 0: Add a scene or image sequence with 4 frames (1234) or open the attached file [bug test.blend](https://archive.blender.org/developer/F8413567/bug_test.blend). - > Preview shows Frame 1 Step 1: Type the right arrow key **>** twice - > Preview shows Frame 3 Step 2: Type **Shift-K** to Hard Cut the strip (12|34) into a new left strip and a new right strip. - > Preview shows Frame 3 Step 3: Use the mouse to Delete or move away the right strip (34). - > Preview shows nothing Step 4: Pull the arrow of the left strip (12) to Extend it by two or more frames. - > Preview shows Frame 3 (but it should show Frame 2) Step 5: Press the arrow keys to switch trough the frames - > Preview shows the frames (1232) (but it should show the frames (1222)) Step 6: Clear cache (Move the strip, or save and reopen the file) - > Preview shows the frames (1222) Note 1: Error MAY NOT occur, if during Step 1, the left arrow key **<** was pressed. Note 2: Error MAY NOT occur, if during Step 1, the Play Animation button was pressed. Note 3: Error DOES occur, if in Step 1, the mouse is used to reach Frame 3 (as far as I have tested it) Note 4: Error DOES NOT occur, if the time cursor is moved between Step 2 and Step 3. Note 5: Error DOES occur, if the initial scene has a different number of frames. Note 6: Error DOES occur, if the Hard Cut is at a different position. Note 7: Error DOES NOT show in the rendered animation Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce. Picture 1: Correct Preview ![correct preview.png](https://archive.blender.org/developer/F8413606/correct_preview.png) Picture 2: Wrong Preview ![wrong preview.png](https://archive.blender.org/developer/F8413608/wrong_preview.png)
Author

Added subscriber: @gabi2002

Added subscriber: @gabi2002

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce.

I had one similar report to this, I think this bug made it to final render. I wasn't able to reproduce though. I will look at code and see if there is some type conversion or anything, that could caused this, but reproducible case would help a lot.. Can you tell at what framerate did this happen?

> Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce. I had one similar report to this, I think this bug made it to final render. I wasn't able to reproduce though. I will look at code and see if there is some type conversion or anything, that could caused this, but reproducible case would help a lot.. Can you tell at what framerate did this happen?
Author

95% sure, it was 24fps for both scenes (video editor and animation source).

Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce.

Please don't waste too much time on Note 8. I was wildly experimenting with scripts and render settings that also caused all sorts of flickers. So, I'm only 50% sure, that the Note 8 flicker was caused by a hard cut.
I suggest, find the reproducible bug, and then consider for 10 minutes, if the reproducible bug might also cause some kind of flicker.

Do you have a report number of this similar report? Maybe it helps me to trace my steps back.

Best
Gabriel

95% sure, it was 24fps for both scenes (video editor and animation source). > Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce. Please don't waste too much time on Note 8. I was wildly experimenting with scripts and render settings that also caused all sorts of flickers. So, I'm only 50% sure, that the Note 8 flicker was caused by a hard cut. I suggest, find the reproducible bug, and then consider for 10 minutes, if the reproducible bug might also cause some kind of flicker. Do you have a report number of this similar report? Maybe it helps me to trace my steps back. Best Gabriel

In #74875#896567, @gabi2002 wrote:
95% sure, it was 24fps for both scenes (video editor and animation source).

Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce.

Please don't waste too much time on Note 8. I was wildly experimenting with scripts and render settings that also caused all sorts of flickers. So, I'm only 50% sure, that the Note 8 flicker was caused by a hard cut.
I suggest, find the reproducible bug, and then consider for 10 minutes, if the reproducible bug might also cause some kind of flicker.

Sure.

Do you have a report number of this similar report? Maybe it helps me to trace my steps back.

#72683 (Blender VSE 2.8 speed control doesn't match render)
If it's same issue it would probably be linked to speed control and possibly only when it is used to stop or pause input strip, but technically it could happen even after hard cut

Best
Gabriel

> In #74875#896567, @gabi2002 wrote: > 95% sure, it was 24fps for both scenes (video editor and animation source). > >> Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce. > > Please don't waste too much time on Note 8. I was wildly experimenting with scripts and render settings that also caused all sorts of flickers. So, I'm only 50% sure, that the Note 8 flicker was caused by a hard cut. > I suggest, find the reproducible bug, and then consider for 10 minutes, if the reproducible bug might also cause some kind of flicker. Sure. > Do you have a report number of this similar report? Maybe it helps me to trace my steps back. #72683 (Blender VSE 2.8 speed control doesn't match render) If it's same issue it would probably be linked to speed control and possibly only when it is used to stop or pause input strip, but technically it could happen even after hard cut > > Best > Gabriel
Author

I retraced the error steps of #72683.
Adding the speed effect made my bug worse.
However it only affects the preview. Rendered frames are fine. So, I couldn't reproduce the problem reported in #72683.

To ease reproducing, I left Multiply Speed set to 1 (no change)

Soft cut, add speed effect

  • Step 0 Add Scene: 123456789
  • Step 1 cut strip: 1234|56789
  • Step 2 delete: 1234 (expected result, I leave cursor at frame 5)
  • Step 3 add speed effect: 1234 (expected result, I leave cursor at frame 5)
  • Step 4 extend: 123456789 (expected result, I leave cursor at frame 5)
  • Step 5 preview: 123486789

Soft cut, move cursor, add speed effect
This third version of my bug is similar, to what I remembered in Note 8. However, Note 8 did not involve a speed effect.

  • Step 0 Add Scene: 123456789
  • Step 1 cut: 1234|56789
  • Step 2 delete: 1234¦ (expected result, I leave cursor at frame 5)
  • Step 2a move Cursor (hit right arrow key 2x) 1234__¦
  • Step 3 add speed effect: 1234__¦ (expected result, I leave cursor at frame 7)
  • Step 4 extend: 123456789 (expected result, I leave cursor at frame 7)
  • Step 5 preview: 123456889

stretch speed controlled strip

  • Step 0 Add Scene: 123456789
  • Step 1 add speed effect: 123456789 (expected result, I leave cursor at frame 1)
  • Step 2 move cursor to frame 2
  • Step 3 shorten strip
  • expected result 147
  • preview result 127

Best
Gabriel

I retraced the error steps of #72683. Adding the speed effect made my bug worse. However it only affects the preview. Rendered frames are fine. So, I couldn't reproduce the problem reported in #72683. To ease reproducing, I left Multiply Speed set to 1 (no change) **Soft cut, add speed effect** - Step 0 Add Scene: 123456789 - Step 1 cut strip: 1234|56789 - Step 2 delete: 1234 (expected result, I leave cursor at frame 5) - Step 3 add speed effect: 1234 (expected result, I leave cursor at frame 5) - Step 4 extend: 123456789 (expected result, I leave cursor at frame 5) - Step 5 preview: 1234**8**6789 **Soft cut, move cursor, add speed effect** This third version of my bug is similar, to what I remembered in Note 8. However, Note 8 did not involve a speed effect. - Step 0 Add Scene: 123456789 - Step 1 cut: 1234|56789 - Step 2 delete: 1234¦ (expected result, I leave cursor at frame 5) - Step 2a move Cursor (hit right arrow key 2x) 1234__¦ - Step 3 add speed effect: 1234__¦ (expected result, I leave cursor at frame 7) - Step 4 extend: 123456789 (expected result, I leave cursor at frame 7) - Step 5 preview: 123456**8**89 **stretch speed controlled strip** - Step 0 Add Scene: 123456789 - Step 1 add speed effect: 123456789 (expected result, I leave cursor at frame 1) - Step 2 move cursor to frame 2 - Step 3 shorten strip - expected result 147 - preview result 1**2**7 Best Gabriel

This issue was referenced by bbf1c83370

This issue was referenced by bbf1c83370ea0682cafb99ad98e52ae625f360a9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-04-12 22:51:20 +02:00
Author

@iss thank you so much for the fix #74875! What a beautiful Easter gift :)
I've tried all test cases above using 2.83 alpha 2020-04-13 17:13, and even played around a bit more. It all works very nicely.

I still can't reproduce

#72683: Blender VSE 2.8 speed control doesn't match render

nor

Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce.

Possibly, your patch has also fixed those issues. And if not, it will at least greatly help to pin down those problems in the future.

@iss thank you so much for the fix #74875! What a beautiful Easter gift :) I've tried all test cases above using 2.83 alpha 2020-04-13 17:13, and even played around a bit more. It all works very nicely. I still can't reproduce > #72683: Blender VSE 2.8 speed control doesn't match render nor > Note 8: I think, in one case, there were multiple incorrect frames, like a flicker (1234) -> (12323232|34) instead of -> (12222222|34), however, I could not reproduce. Possibly, your patch has also fixed those issues. And if not, it will at least greatly help to pin down those problems in the future.

Thanks for report, I did some more fixes in this area. I need to fix those caching issues, but I don't do editing as often, so I appreciate these reports.

Thanks for report, I did some more fixes in this area. I need to fix those caching issues, but I don't do editing as often, so I appreciate these reports.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74875
No description provided.